# asyncur

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  python-app.yml
asyncur/: __init__.py  aio.py  client.py  exceptions.py  timing.py  utils.py  xls.py
scripts/: test.sh
tests/: demo.xlsx  main.py  test_aio.py  test_client.py  test_timing.py  test_utils.py  test_version.py  test_xls.py
