[tool.poetry]
name = "asyncur"
version = "0.5.2"
description = "Async functions to compare with anyio and asyncio, and toolkit to read excel with async/await."
authors = ["Waket Zheng <waketzheng@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
anyio = ">=3.7.1"
pandas = {version = "^2.2.2", optional = true}
openpyxl = {version = "^3.1.2", optional = true}
exceptiongroup = "^1.2.1"
typing-extensions = "^4.11.0"
redis = "^5.0.4"

[tool.poetry.extras]
xls = ["pandas", "openpyxl"]


[tool.poetry.group.dev.dependencies]
fast-dev-cli = {version = ">=0.7.0", python = ">=3.11", extras = ["all"]}
pandas-stubs = "^2.2.1.240316"
coveralls = {version = ">=3.3.1", python = ">=3.10,<3.13"}
ruff = "^0.4.3"
pandas = "^2.2.2"
openpyxl = "^3.1.2"
mypy = "^1.10.0"
pytest = "^8.2.0"
types-redis = "^4.6.0.20240425"
fastapi = "^0.111.0"
asgi-lifespan = "^2.1.0"

[tool.mypy]
pretty = true
ignore_missing_imports = true
check_untyped_defs = true

[tool.coverage.report]
omit = ["*/tests/*", "test_*"]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    'if __name__ == "__main__":',
    "if TYPE_CHECKING:",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
