[tool.poetry]
name = "asyncur"
version = "0.5.3"
description = "Async functions to compare with anyio and asyncio, and toolkit to read excel with async/await."
authors = ["Waket Zheng <waketzheng@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
anyio = ">=3.7.1"
pandas = {version = "^2.2.2", optional = true}
openpyxl = {version = "^3.1.4", optional = true}
redis = ">=5.0.0"
# requires by anyio:
#    "exceptiongroup >= 1.0.2; python_version < '3.11'",
#    "typing_extensions >= 4.1; python_version < '3.11'",

[tool.poetry.extras]
xls = ["pandas", "openpyxl"]


[tool.poetry.group.dev.dependencies]
fast-dev-cli = "^0.8.3"
pandas = "^2.2.2"
openpyxl = "^3.1.4"
fastapi-slim = "^0.111.0"
httpx = "*"
asgi-lifespan = "^2.1.0"
types-redis = "^4.6.0.20240425"
pandas-stubs = "^2.2.2.240603"

[tool.mypy]
pretty = true
ignore_missing_imports = true
check_untyped_defs = true

[tool.coverage.report]
omit = ["*/tests/*", "test_*"]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    'if __name__ == "__main__":',
    "if TYPE_CHECKING:",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
